# CodeAtlas

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: epic.yml  manual.yml  ticket.yml
.github/workflows/: ci.yml
crates/adapter-api/: Cargo.toml
crates/adapter-api/src/: contract.rs  lib.rs  regression.rs  router.rs
crates/adapter-api/tests/: routing_policy_integration.rs
crates/adapter-semantic-kotlin/: Cargo.toml
crates/adapter-semantic-kotlin/src/: adapter.rs  config.rs  error.rs  mapping.rs  process.rs  protocol.rs  runtime.rs
crates/adapter-semantic-kotlin/tests/: adapter_contract.rs  fixture_project_integration.rs  quality_regression.rs
crates/adapter-semantic-typescript/: Cargo.toml
crates/adapter-semantic-typescript/src/: adapter.rs  config.rs  error.rs  lib.rs  mapping.rs  process.rs  protocol.rs  runtime.rs
crates/adapter-semantic-typescript/tests/: adapter_contract.rs  quality_regression.rs
crates/adapter-syntax-treesitter/: Cargo.toml
crates/adapter-syntax-treesitter/src/: languages.rs  lib.rs
crates/adapter-syntax-treesitter/tests/: adapter_contract.rs  fixture_repo_integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: data_root.rs  error.rs  lib.rs  logging.rs  main.rs  mcp_bridge.rs  mcp_stdio.rs  router.rs
crates/cli/src/commands/: file_outline.rs  file_tree.rs  get_symbol.rs  index.rs  mcp_serve.rs  mod.rs  quality_report.rs  repo.rs  repo_outline.rs  search_symbols.rs  serve.rs
crates/cli/tests/: cli_integration.rs  structured_logging.rs
crates/core-model/: Cargo.toml
crates/core-model/src/: lib.rs  schema_version.rs  symbol_id.rs
crates/core-model/tests/: schema_migration_contract.rs  serde_compatibility.rs
crates/indexer/: Cargo.toml
crates/indexer/benches/: pipeline.rs
crates/indexer/src/: change_detection.rs  classify.rs  context.rs  dispatch.rs  enrich.rs  git.rs  lib.rs  merge.rs  merge_engine.rs  metrics.rs  pipeline.rs  registry.rs  stage.rs
crates/indexer/tests/: determinism_regression.rs  perf_thresholds.rs  pipeline_integration.rs  security_regression.rs  span_emission.rs
crates/query-engine/: Cargo.toml
crates/query-engine/benches/: queries.rs
crates/query-engine/src/: lib.rs  ranking.rs  store_service.rs
crates/query-engine/tests/: capability_tier_integration.rs  get_symbol_integration.rs  outline_integration.rs  perf_thresholds.rs  search_symbols_integration.rs  search_text_integration.rs  span_emission.rs
crates/repo-walker/: Cargo.toml
crates/repo-walker/benches/: discovery.rs
crates/repo-walker/src/: language.rs  lib.rs
crates/repo-walker/tests/: language_detection_integration.rs  metrics_and_logging_integration.rs  perf_thresholds.rs  security_regression.rs  walk_integration.rs
crates/repo-walker/tests/common/: mod.rs
crates/semantic-api/: Cargo.toml
crates/semantic-api/src/: lib.rs
crates/server-mcp/: Cargo.toml
crates/server-mcp/src/: lib.rs  registry.rs  tools.rs  types.rs
crates/server-mcp/tests/: e2e_integration.rs  registry_integration.rs  span_emission.rs
crates/service/: Cargo.toml
crates/service/src/: lib.rs  routes.rs  state.rs
crates/store/: Cargo.toml
crates/store/src/: blob_store.rs  file_store.rs  lib.rs  migrations.rs  repo_store.rs  symbol_store.rs
crates/store/tests/: blob_integration.rs  sqlite_integration.rs
crates/syntax-platform/: Cargo.toml
crates/syntax-platform/src/: extraction.rs  lib.rs  types.rs
crates/syntax-platform/src/languages/: go.rs  java.rs  javascript.rs  mod.rs  php.rs  python.rs  rust.rs
crates/workspace-placeholder/: Cargo.toml
crates/workspace-placeholder/src/: lib.rs
docs/: engineering-principles.md
docs/architecture/: capability-tier-query-behavior.md  code-derived-repository-intelligence-notes.md  deployment-modes.md  mcp-client-compatibility.md  mcp-server-planning.md  persistent-local-service.md  rust-code-intelligence-plan.md  universal-syntax-indexing-architecture.md
docs/benchmarks/: blog-benchmark-kit.md  corpus.md
docs/benchmarks/templates/: blog-queries.csv  blog-queries.tsv  blog-repos.csv  blog-repos.tsv
docs/operations/: runbook.md
docs/planning/: code-derived-repository-intelligence.md  github-issue-seeding.md  issue-backlog.md  mcp-github-issues.md  persistent-multi-repo-local-service.md  post-v1-roadmap.md  recognized-language-file-indexing.md  universal-syntax-indexing.md
docs/planning/github-issues/: code-derived-issue-creation-order.md  code-derived-repository-intelligence-epic.md  code-derived-ticket-architecture.md  code-derived-ticket-benchmarks.md  code-derived-ticket-derived-facts.md  code-derived-ticket-graph-persistence.md  code-derived-ticket-graph-query-surfaces.md  code-derived-ticket-path-retrieval.md  code-derived-ticket-ranking-explanations.md  code-derived-ticket-slice-retrieval-core.md  code-derived-ticket-slice-retrieval-surfaces.md  file-indexing-epic.md  file-indexing-ticket-docs-metrics.md  file-indexing-ticket-pipeline-store.md  file-indexing-ticket-query-content.md  mcp-epic.md  mcp-ticket-cli-entrypoint.md  mcp-ticket-client-compat.md  mcp-ticket-diagnostics-tests.md  mcp-ticket-docs.md  mcp-ticket-packaging.md  mcp-ticket-schemas.md  mcp-ticket-transport.md  persistent-service-epic.md  persistent-service-ticket-architecture.md  persistent-service-ticket-docs.md  persistent-service-ticket-mcp-bridge.md  persistent-service-ticket-repo-lifecycle.md  persistent-service-ticket-runtime.md  persistent-service-ticket-shared-store-catalog.md  universal-syntax-indexing-epic.md  universal-syntax-issue-creation-order.md  universal-syntax-ticket-architecture.md  universal-syntax-ticket-benchmarks-docs.md  universal-syntax-ticket-core-model-metrics.md  universal-syntax-ticket-go.md  universal-syntax-ticket-java.md  universal-syntax-ticket-javascript.md  universal-syntax-ticket-php.md  universal-syntax-ticket-python.md  (+2 more)
docs/specifications/: README.md  rust-code-intelligence-platform-spec.md
docs/workflow/: ai-ticket-workflow.md  github-process.md
scripts/blog/: collect_blog_metrics.sh
(+14 files in other folders)
