[workspace]
members = ["crates/adapter-api", "crates/core-model", "crates/repo-walker", "crates/workspace-placeholder"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/developepper/CodeAtlas"

[workspace.dependencies]
core-model = { path = "crates/core-model" }
globset = "0.4.16"
ignore = "0.4.24"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
time = { version = "0.3.37", features = ["parsing", "formatting"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
