[workspace]
members = ["crates/adapter-api", "crates/adapter-semantic-typescript", "crates/adapter-syntax-treesitter", "crates/cli", "crates/core-model", "crates/indexer", "crates/query-engine", "crates/repo-walker", "crates/server-mcp", "crates/store", "crates/workspace-placeholder"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/developepper/CodeAtlas"

[workspace.dependencies]
adapter-api = { path = "crates/adapter-api" }
adapter-semantic-typescript = { path = "crates/adapter-semantic-typescript" }
adapter-syntax-treesitter = { path = "crates/adapter-syntax-treesitter" }
core-model = { path = "crates/core-model" }
globset = "0.4.16"
indexer = { path = "crates/indexer" }
ignore = "0.4.24"
query-engine = { path = "crates/query-engine" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
time = { version = "0.3.37", features = ["parsing", "formatting"] }
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tracing = "0.1.41"
rusqlite = { version = "0.35", features = ["bundled"] }
store = { path = "crates/store" }
sha2 = "0.10"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-stdout = "0.27"
tracing-opentelemetry = "0.28"
criterion = { version = "0.5", features = ["html_reports"] }
