[workspace]
members = ["crates/adapter-semantic-kotlin", "crates/adapter-semantic-typescript", "crates/cli", "crates/core-model", "crates/indexer", "crates/query-engine", "crates/repo-walker", "crates/semantic-api", "crates/server-mcp", "crates/service", "crates/store", "crates/syntax-platform", "crates/workspace-placeholder"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
repository = "https://github.com/developepper/CodeAtlas"

[workspace.dependencies]
semantic-kotlin = { path = "crates/adapter-semantic-kotlin" }
semantic-typescript = { path = "crates/adapter-semantic-typescript" }
core-model = { path = "crates/core-model" }
globset = "0.4.16"
indexer = { path = "crates/indexer" }
ignore = "0.4.24"
query-engine = { path = "crates/query-engine" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.20.0"
time = { version = "0.3.37", features = ["parsing", "formatting"] }
tree-sitter = "0.25"
tree-sitter-php = "0.24"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tracing = "0.1.41"
rusqlite = { version = "0.35", features = ["bundled"] }
server-mcp = { path = "crates/server-mcp" }
semantic-api = { path = "crates/semantic-api" }
store = { path = "crates/store" }
syntax-platform = { path = "crates/syntax-platform" }
thiserror = "2"
sha2 = "0.10"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-stdout = "0.27"
tracing-opentelemetry = "0.28"
criterion = { version = "0.5", features = ["html_reports"] }
libc = "0.2"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
service = { path = "crates/service" }
tower = "0.5"
