[package]
name = "adapter-semantic-kotlin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
adapter-api.workspace = true
core-model.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
adapter-api = { workspace = true, features = ["test-harness"] }
tempfile.workspace = true
