[package]
name = "semantic-typescript"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
core-model.workspace = true
semantic-api.workspace = true
serde.workspace = true
serde_json.workspace = true
syntax-platform.workspace = true
tracing.workspace = true

[dev-dependencies]
semantic-api.workspace = true
tempfile.workspace = true
