[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "codeatlas"
path = "src/main.rs"

[dependencies]
adapter-api.workspace = true
adapter-syntax-treesitter.workspace = true
core-model.workspace = true
indexer.workspace = true
query-engine.workspace = true
serde_json.workspace = true
store.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
tempfile.workspace = true
