[package]
name = "cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "CodeAtlas CLI — local code intelligence indexing, querying, and MCP server"

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "codeatlas"
path = "src/main.rs"

[dependencies]
adapter-api.workspace = true
adapter-semantic-kotlin.workspace = true
adapter-semantic-typescript.workspace = true
adapter-syntax-treesitter.workspace = true
core-model.workspace = true
indexer.workspace = true
query-engine.workspace = true
serde.workspace = true
serde_json.workspace = true
libc.workspace = true
server-mcp.workspace = true
store.workspace = true
time.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-stdout.workspace = true
tracing-opentelemetry.workspace = true

[dev-dependencies]
libc.workspace = true
tempfile.workspace = true
