[package]
name = "indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
adapter-api.workspace = true
core-model.workspace = true
repo-walker = { path = "../repo-walker" }
store = { path = "../store" }
time.workspace = true
tracing.workspace = true

[dev-dependencies]
adapter-syntax-treesitter = { path = "../adapter-syntax-treesitter" }
criterion.workspace = true
query-engine = { path = "../query-engine" }
tempfile.workspace = true
tracing-subscriber.workspace = true

[[bench]]
name = "pipeline"
harness = false
