[package]
name = "indexer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
core-model.workspace = true
repo-walker = { path = "../repo-walker" }
semantic-api.workspace = true
store = { path = "../store" }
syntax-platform.workspace = true
time.workspace = true
tracing.workspace = true

[dev-dependencies]
criterion.workspace = true
query-engine = { path = "../query-engine" }
tempfile.workspace = true
tracing-subscriber.workspace = true

[[bench]]
name = "pipeline"
harness = false
