[package]
name = "query-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
test-support = []

[dependencies]
core-model.workspace = true
store.workspace = true
tracing.workspace = true

[dev-dependencies]
adapter-api.workspace = true
adapter-syntax-treesitter.workspace = true
indexer.workspace = true
query-engine = { path = ".", features = ["test-support"] }
tempfile.workspace = true
tracing-subscriber.workspace = true
