[package]
name = "repo-walker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
globset.workspace = true
ignore.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tracing-subscriber.workspace = true
