[package]
name = "syntax-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
core-model.workspace = true
thiserror = "2"
tree-sitter.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-php.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
